Testing: Checking link to ensure it has code from meetup api

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title></title>
 </head>
 <script type="text/javascript">
+	alert(window.location)
 	window.location = "agendaauth://"
 </script>
 <body>
