Testing: Passes referrer as parameter to app so ios know which api was logged into

--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
 </head>
 <script type="text/javascript">
 	var loadApp = function () {
-		var appURL = "agendaauth://";
-		var urlParams = getURLParameters(window.location.href);
-		for (var key in urlParams) {
-			appURL += (key + "=" + urlParams[key] + "&")
-		}
-		appURL = appURL.substring(0, appURL.length - 1)
+		var appBaseUrl = "agendaauth://";
+		var appUrl = addParamsToAppUrl(appBaseUrl)
 		window.location = appURL;
+	}
+	var addParamsToAppUrl = function (appBaseUrl) {
+		var urlParams = getURLParameters(window.location.href);
+		var appUrl = appBaseUrl;
+		for (var key in urlParams) {
+			appUrl += (key + "=" + urlParams[key] + "&")
+		}
+		appUrl += ("referrer=" + findReferrer())
+		return appUrl
 	}
 	var getURLParameters = function (link) {
 		var urlParams = link.split("#")[1].split("&")
@@ -20,6 +25,14 @@
 			parsedParams[urlParams[i].split("=")[0]] = urlParams[i].split("=")[1] ;
 		}
 		return parsedParams;
+	}
+	var findReferrer = function () {
+		var previousWindowLocation = document.createElement('a');
+		previousWindowLocation.href = document.referrer;
+		var referrer = previousWindowLocation.host.slice(4, previousWindowLocation.host.length-4)
+		// Remove www. & .com
+		return referrer
+
 	}
 	loadApp()
 </script>
