Fixed: var misspelled error

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	var loadApp = function () {
 		var appBaseUrl = "agendaauth://";
 		var appUrl = addParamsToAppUrl(appBaseUrl)
-		window.location = appURL;
+		window.location = appUrl;
 	}
 	var addParamsToAppUrl = function (appBaseUrl) {
 		var urlParams = getURLParameters(window.location.href);
